--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,38 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+commands:
+  install-engine:
+    description: "Install Sonarqube scanner"
+    parameters:
+      engine_version:
+        type: string
+        default: "4.2.0.1873"
     steps:
-      - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Install Sonarqube scanner"
+          command: |
+            wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-<< parameters.engine_version >>.zip
+            unzip sonar-scanner-cli-<< parameters.engine_version >>.zip
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+
+jobs:
+  code-analysis:
+    docker:
+      - image: cimg/openjdk:11.0.16
+    steps:
+      # - add_ssh_keys:
+      #     fingerprints:
+      #     - "29:40:92:a4:90:da:6e:dc:d2:62:6f:ca:ee:da:bc:2d"
+      - checkout
+      - install-engine
+      - run:
+          name: code-coverage
+          command: |
+            cd /home/circleci/project/
+            ls -lrt /home/circleci/project/
+            mvn clean verify sonar:sonar -Dsonar.projectKey=SonarQube-Project -Dsonar.projectName='SonarQube-Project' -Dsonar.host.url=http://10.24.42.90:9000 -Dsonar.token=sqp_f4c88a656a835b19d2e13818e7adaf86f44a7de2
+      
 workflows:
-  say-hello-workflow:
+  main-workflow:
     jobs:
-      - say-hello
+      - code-analysis
