--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,19 @@
 version: 2.1
-
-commands:
-  install-engine:
-    description: "Install Sonarqube scanner"
-    parameters:
-      engine_version:
-        type: string
-        default: "4.2.0.1873"
-    steps:
-      - run:
-          name: "Install Sonarqube scanner"
-          command: |
-            wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-<< parameters.engine_version >>.zip
-            unzip sonar-scanner-cli-<< parameters.engine_version >>.zip
-
-
 jobs:
   code-analysis:
     docker:
       - image: cimg/openjdk:11.0.16
     steps:
-      # - add_ssh_keys:
-      #     fingerprints:
-      #     - "29:40:92:a4:90:da:6e:dc:d2:62:6f:ca:ee:da:bc:2d"
+      - add_ssh_keys:
+          fingerprints:
+          - "1e:15:1c:62:4a:55:75:e9:24:1a:ae:6d:3b:5c:80:68"
       - checkout
-      - install-engine
       - run:
           name: code-coverage
           command: |
             cd /home/circleci/project/
             ls -lrt /home/circleci/project/
-            mvn clean verify sonar:sonar -Dsonar.projectKey=sonar-project -Dsonar.projectName='sonar-project' -Dsonar.host.url=http://localhost:9002 -Dsonar.token=sqp_2cc6e009ff85c814ddaa94b7b2370579242025cf
-      
+            mvn clean verify sonar:sonar -Dsonar.projectKey=sonar-project -Dsonar.projectName='sonar-project' -Dsonar.host.url=http://ec2-3-110-118-101.ap-south-1.compute.amazonaws.com:9000 -Dsonar.token=sqp_f0dc3d706865eaf72e76fc0147b4d43a64dc011c
 workflows:
   main-workflow:
     jobs:
