--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,20 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  code-analysis:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: cimg/openjdk:11.0.16
     steps:
+      - add_ssh_keys:
+          fingerprints:
+          - "1e:15:1c:62:4a:55:75:e9:24:1a:ae:6d:3b:5c:80:68"
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+          name: code-coverage
+          command: |
+            cd /home/circleci/project/
+            ls -lrt /home/circleci/project/
+            mvn clean verify sonar:sonar -Dsonar.projectKey=sonar-project -Dsonar.projectName='sonar-project' -Dsonar.host.url=http://ec2-3-110-118-101.ap-south-1.compute.amazonaws.com:9000 -Dsonar.token=sqp_f0dc3d706865eaf72e76fc0147b4d43a64dc011c
 workflows:
-  say-hello-workflow:
+  main-workflow:
     jobs:
-      - say-hello
+      - code-analysis
